--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,18 +15,19 @@
             android:layout_height="wrap_content"
             banner:bb_delay="2"
             banner:bb_period="2"
-            banner:bb_scale="0.5625"/>
+            banner:bb_barColor="#44000000"
+            banner:bb_indicatorGravity="CENTER"
+            banner:bb_scale="0.5"/>
         <com.flyco.pageindicator.indicator.RoundCornerIndicaor
             android:id="@+id/indicator_circle"
             xmlns:rci="http://schemas.android.com/apk/res-auto"
-            android:layout_gravity="right|bottom"
+            android:layout_gravity="center_horizontal|bottom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"
             android:paddingTop="15dp"
             rci:rci_cornerRadius="3dp"
             rci:rci_gap="5dp"
+            rci:rci_selectColor="@color/red"
             rci:rci_height="6dp"
             rci:rci_width="6dp"/>
     </FrameLayout>
