--- a/app/src/main/res/layout/tweet.xml
+++ b/app/src/main/res/layout/tweet.xml
@@ -19,15 +19,14 @@
     android:padding="10dp"
     android:layout_gravity="center">
 
-    <ImageView
+    <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/tweetAvatar"
         android:layout_margin="@dimen/smallSpace"
         android:layout_width="@dimen/avatarSize"
         android:layout_height="@dimen/avatarSize"
         android:layout_centerInParent="true"
         android:layout_alignParentLeft="true"
-        android:src="@mipmap/ic_launcher"
-      />
+        android:src="@mipmap/ic_launcher"/>
 
     <ImageView
         android:id="@+id/tweetRT"
